Fix for bad CSS causing build manager to grow too long again

--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -73,7 +73,7 @@
 
 #page-replace-target {
     flex-grow: 1;
-    /* height: calc(100% - var(--footer-height) - var(--footer-margin-top) - var(--footer-border-width)); */
+    height: calc(100% - var(--footer-height) - var(--footer-margin-top) - var(--footer-border-width));
 }
 
 #page-replace-target.hideFooter {
